--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ blinker==1.4
 click==6.7
 Flask==0.12.2
 Flask-Mail==0.9.1
+Flask-PageDown==0.2.2
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.6
+Markdown==2.6.9
 MarkupSafe==1.0
 Werkzeug==0.12.2
 WTForms==2.1
