--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+aniso8601==1.3.0
 blinker==1.4
 click==6.7
 Flask==0.12.2
 Flask-Mail==0.9.1
 Flask-PageDown==0.2.2
+Flask-RESTful==0.3.6
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.6
 Markdown==2.6.9
 MarkupSafe==1.0
+python-dateutil==2.6.1
+pytz==2017.2
+six==1.11.0
 Werkzeug==0.12.2
 WTForms==2.1
