initial commit for mod

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.6
 Markdown==2.6.9
-MarkupSafe==1.0
+MarkupSafe==1.1.1
 python-dateutil==2.6.1
+python-dotenv==0.14.0
 pytz==2017.2
 six==1.11.0
 Werkzeug==0.12.2
